Most tests now pass
Still failing, due to timeouts:
    org.vertx.java.tests.core.redeploy.RedeployerTest

I found a way to execute the JRuby test suite without first installing JRuby; this requires providing the jruby-complete artifact on the test classpath, excluding the jruby artifact from the vertx-lang-jruby dependency, and installing required gems.